--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ body {
   background: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7;
-  background-image: url(../src/assets/Screenshot\ 2023-05-08\ 151013.png)
+  background-image: url(../src/assets/images.jpg)
 
 }
 
