--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -51,6 +51,17 @@ header {
   padding: 5rem 1.5rem 1.5rem 1.5rem;
 }
 
+.about {
+  width: 22rem;
+  position: absolute;
+  left: 0%;
+  transform: translate;
+  margin-top: 4rem;
+  border-radius: 12rem 12rem 0 0;
+  overflow: hidden;
+  padding: 5rem 1.5rem 1.5rem 1.5rem;
+}
+
 /*========================= SCROLL BAR ==================================*/
 .scroll_down {
   position: absolute;
